# starberry

./: .gitignore  Cargo.toml  LICENSE.txt  QUICK_TUTORIAL.md  Starberry.7z  form.html  readme.md
example/: Cargo.toml  build.rs
example/programfiles/: example.txt
example/src/: async_endpoints.rs  form.rs  lib.rs  main.rs  middleware.rs
example/templates/: base.html  cookie.html  form.html  home.html
oauth_core/: Cargo.toml
oauth_core/src/oauth_core/: cookie.rs  crypto.rs  db.rs  jwt.rs  middleware.rs
sbmstd/: Cargo.toml  readme.md
sbmstd/src/: lib.rs  logging.rs  session.rs  test.rs
sbmstd/src/cors/: cors.rs  cors_settings.rs  mod.rs
sbmstd/src/oauth_core/: cookie.rs  db.rs  memory.rs  middleware.rs  mod.rs  oauth_provider.rs  types.rs
sbmstd/src/session/: cookie_session.rs  mod.rs  session.rs  session_counter.rs
sm/: Cargo.toml
sm/src/: keywords.rs  lib.rs  parser.rs
src/: akatemp.rs  app.rs  lib.rs  main.rs  test.rs
src/akatemp/: templates.rs
src/app/: app.rs  application.rs  urls.rs
src/http/: http_value.rs  request.rs  response.rs
starberry/: Cargo.toml  readme.md
starberry/src/: lib.rs  main.rs  main_old.rs  preload.rs  prelude.rs
starberry_core/: Cargo.toml
starberry_core/src/: Cargo.toml  akatemp.rs  app.rs  connection.rs  context.rs  extensions.rs  http.rs  lib.rs  object.rs  pool.rs  protocol.rs
starberry_core/src/akatemp/: parse.rs  templates.rs
starberry_core/src/app/: application.rs  config.rs  connection_pool.rs  middleware.rs  protocol.rs  urls.rs
starberry_core/src/connection/: builder.rs  connection.rs  error.rs  pool.rs  rc.rs  receive.rs  test.rs  transmit.rs
starberry_core/src/http/: body.rs  context.rs  cookie.rs  encoding.rs  form.rs  http_value.rs  meta.rs  net.rs  request.rs  response.rs  safety.rs  start_line.rs
starberry_core/src/sql/: builder.rs  connection.rs  encode.rs  error.rs  mod.rs  pool.rs  query.rs  row.rs  test.rs
starberry_lib/: Cargo.toml  readme.md
starberry_lib/src/: compression.rs  ende.rs  lib.rs  url_encoding.rs
starberry_middlewares/: Cargo.toml
starberry_middlewares/src/: lib.rs  test.rs
starberry_oauth/: Cargo.toml  README.md
starberry_oauth/examples/: minimal.rs  openid.rs  social.rs
starberry_oauth/src/: lib.rs
starberry_oauth/src/oauth_core/: context.rs  cookie.rs  crypto.rs  db.rs  grant_helpers.rs  http_client.rs  jwks.rs  jwt.rs  memory.rs  middleware.rs  mod.rs  oauth_client.rs  oauth_provider.rs  rate_limiter.rs  types.rs
starberry_oauth/src/openid/: discovery.rs  mod.rs  oidc_token_manager.rs
starberry_oauth/src/social/: mod.rs  provider.rs
starberry_oauth/tests/: error_response.rs  flow_test.rs  openid_test.rs  plugins_compile.rs  provider_test.rs  social_test.rs
starberry_sql/: Cargo.toml  README.md
starberry_sql/src/: lib.rs
starberry_sql/src/sql/: connection.rs  context.rs  encode.rs  error.rs  mod.rs  pool.rs  query.rs  test.rs
