[package]
name = "starberry"
version = "0.1.2"
edition = "2024"
authors = ["Redstone <redstone@fds.moe>"] 
description = "A web server framework. THIS IS STILL IN DEVELOPMENTAL STAGE" 
license-file = "LICENSE.txt" 
repository = "https://github.com/Redstone-D/starberry" 

[dependencies]
regex = "1.5.6" 
tokio = { version = "1.28", features = ["full"] } 
futures = "0.3" 
