[package]
name = "sbmstd"
version = "0.4.1"
edition = "2024"
authors = ["Redstone <redstone@fds.moe>"] 
description = "Standard Middleware Library for Starberry" 
license = "MIT" 
repository = "https://github.com/Redstone-D/starberry" 
categories = ["network-programming", "web-programming::http-server"] 
keywords = ["starberry"]   

[dependencies]
starberry_macro = { path = "../sm", version="0.5"} 
starberry_core = { path = "../starberry_core", version="0.5"} 
dashmap = "6.1.0" 
tokio = { version = "1.28", features = ["full"] }  
lazy_static = "1.5.0"
uuid = { version = "1.3.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22.1"
ring = "0.17.14"
starberry_lib = { path = "../starberry_lib", version = "0.5.0" }
