[package]
name = "starberry_macro"
version = "0.6.0" 
edition = "2024"
authors = ["Redstone <redstone@fds.moe>"] 
description = "Macro crate for starberry" 
license = "MIT" 
repository = "https://github.com/Redstone-D/starberry" 
categories = ["network-programming", "web-programming::http-server" ] 
keywords = ["starberry"]   

[dependencies] 
syn = { version = "2.0", features = ["full"] } 
proc-macro2 = "1.0.89" 
ctor = "0.4.0" 
quote = "1.0" 

[lib]
proc-macro = true
