[package]
name = "starberry"
version = "0.5.1" 
edition = "2024"
authors = ["Redstone <redstone@fds.moe>"] 
description = "Small, sweet, easy framework for full-stack web application" 
license = "MIT" 
repository = "https://github.com/Redstone-D/starberry" 
homepage = "https://fds.rs" 
categories = ["network-programming", "web-programming::http-server" ]
keywords = ["full-stack", "web-framework", "starberry"] 
readme = "readme.md" 

[dependencies] 
akari = "0.2.3" 
regex = "1.5.6" 
tokio = { version = "1.28", features = ["full"] } 
futures = "0.3" 
once_cell = "1.17.2" 
starberry_macro = { path = "../sm", version="0.5"} 
starberry_core = { path = "../starberry_core", version="0.5.5" } 
starberry_lib = { path = "../starberry_lib", version="0.5" } 
ctor = "0.4.0" 
