[package]
name = "starberry_core"
version = "0.3.0" 
edition = "2024"
authors = ["Redstone <redstone@fds.moe>"] 
description = "Small, sweet, easy framework for full-stack web application" 
license = "MIT" 
repository = "https://github.com/Redstone-D/starberry" 
categories = ["network-programming", "web-programming::http-server"] 
keywords = ["starberry"]  

[dependencies] 
akari = "0.1.0" 
regex = "1.5.6" 
tokio = { version = "1.28", features = ["full"] } 
futures = "0.3" 
include_dir = "0.7" 
once_cell = "1.17" 
