[package]
name = "starberry_core"
version = "0.6.5" 
edition = "2024"
authors = ["Redstone <redstone@fds.moe>"] 
description = "Small, sweet, easy framework for full-stack web application" 
license = "MIT" 
repository = "https://github.com/Redstone-D/starberry" 
categories = ["network-programming", "web-programming::http-server"] 
keywords = ["starberry"]  

[dependencies] 
akari = "0.2.4" 
starberry_lib = { version = "0.6.0", path = "../starberry_lib" } 
regex = "1.5.6" 
tokio = { version = "1.28", features = ["full"] } 
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-platform-verifier = { version = "0.5.0", default-features = false }
webpki-roots = "0.26"
futures = "0.3" 
include_dir = "0.7" 
once_cell = "1.17" 
async-trait = "0.1.88" 
