[package]
name = "starberry_oauth"
version = "0.6.0"
edition = "2024"

[dependencies]
starberry_macro = { path = "../sm", version = "0.6" }
starberry_core = { path = "../starberry_core", version = "0.6" }
dashmap = "6.1.0"
tokio = { version = "1.28", features = ["full"] }
lazy_static = "1.5.0"
uuid = { version = "1.3.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22.1"
ring = "0.17.14"
starberry_lib = { path = "../starberry_lib", version = "0.7.2" }
sbmstd = { path = "../sbmstd", version = "0.6.0" }
starberry_sql = { path = "../starberry_sql", version = "0.6.0" }
async-trait = "0.1"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"], optional = true }

[dev-dependencies]
 tokio = { version = "1.28", features = ["full", "macros"] }

[features]
# default = pure OAuth2
default = ["oauth2"]
oauth2 = []

# OpenID Connect server plugin (discovery, JWKS, id_token, userinfo)
# we pull in jsonwebtoken & serde for JWT support
openid = [
  "oauth2",
]

# “Social login” plugin (Google, GitHub, other OAuth2/OIDC upstreams)
# using reqwest + serde_json for HTTP+JSON
social = [
  "oauth2",
  "reqwest",
]