[package]
name = "starberry_sql"
version = "0.6.0"
edition = "2024"

[dependencies]
akari = "0.2.3" 
starberry_lib = { version = "0.6.0", path = "../starberry_lib" } 
regex = "1.5.6" 
tokio = { version = "1.28", features = ["full"] } 
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-platform-verifier = { version = "0.5.0", default-features = false }
webpki-roots = "1.0.0"
futures = "0.3" 
include_dir = "0.7" 
once_cell = "1.17" 
async-trait = "0.1.88" 
md5 = "0.7.0"
base64 = "0.22.1"
ring = "0.17.14"
starberry_macro = { path = "../sm", version="0.6"} 
starberry_core = { path = "../starberry_core", version="0.6"} 
